# BI-OSY-2019

./: CMakeLists.txt  Makefile  README.md  common.h  progtest_solver.h  sample_tester.cpp  sample_tester.h  solution.cpp
1_assignment/: CMakeLists.txt  Makefile  solution.cpp  test
